tests/base/invalid/Switch_CompileFail_5.whiley
import whiley.lang.*:*

int f(int x):
    if x > 0:
        break
    return 0
